<resources>
  <string name="app_name">My Timetable</string>
  <string name="title_activity_login">Sign into Senshu Portal</string>

  <!-- Strings related to login -->
  <string name="prompt_password">Password</string>
  <string name="action_sign_in_short">Login</string>
  <string name="error_required_field">This field is required</string>
  <string name="prompt_userid">Student ID</string>
  <string name="label_loading_info">Loading...</string>

  <string name="logging_in">Logging in...</string>
  <string name="comm_failed">Failed to communicate</string>
  <string name="wrong_id_pass">User ID or password is not correct.</string>
  <string name="title_activity_to_do_list" translatable="false">ToDo</string>
  <string name="title_activity_todo_add">Add new ToDo</string>
  <string name="edit_todo_date_placeholder" translatable="false">20XX/YY/DD</string>
  <string name="edit_todo_label_title">Title</string>
  <string name="edit_todo_label_deadline">Deadline</string>
  <string name="edit_todo_label_subject">Subject</string>
  <string name="edit_todo_label_detail">Detail</string>
  <string name="label_no_title">(No title)</string>
  <string name="label_no_text">(No description)</string>
  <string name="label_today">Today</string>
  <string name="label_tomorrow">Tomorrow</string>
  <string name="label_in_ndays">%1$d days</string>
  <string name="title_activity_change_activity">Change Info</string>
  <string name="label_nochange">No changes for %1$s.</string>
  <string name="kyuko">No lecture</string>
  <string name="change">Change</string>
  <string name="separate_colon" translatable="false">%1$s: %2$s</string>
  <string name="hint_drawer_open">Open Drawer</string>
  <string name="hint_drawer_close">Close Drawer</string>
  <string name="tab_news_private">Personal</string>
  <string name="tab_news_public">Public</string>
  <string name="tab_news_jobs">Jobs</string>
  <string name="downloading">Downloading...</string>
  <string name="lack_permission">Permission denied. Prease allow Storage permssion.</string>
  <string name="drawer_timetable">Timetable</string>
  <string name="drawer_news">Messages</string>
  <string name="label_about_version">Version %1$s</string>
  <string name="label_about_email">Email: %1$s</string>
  <string name="mail_address" translatable="false">shimashimazebra13@gmail.com</string>
  <string name="label_about_author">Made by %1$s</string>
  <string name="author_name" translatable="false">S-zebra</string>
  <string name="label_about_cont_gh">View source on %1$s</string>
  <string name="github_url" translatable="false">https://github.com/S-zebra/senshu_portal_andorid</string>
  <string name="url_tag" translatable="false"><a href="%1$s">%2$s</a></string>
  <string name="drawer_about">About</string>
  <string name="menu_item_term">Term</string>
  <string name="menu_item_term_first">First</string>
  <string name="menu_item_term_last">Second</string>
  <string name="label_welcome">Welcome to Senshu Portal!</string>
  <string name="label_welcome_login">Enter your student ID and password to login.</string>
</resources>
